--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ junk/
 
 #ignore this file type
 .DS_Store
+.config.js
 package-lock.json
 
 #ignore this folder which store image files for metadata production usage
