--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ junk/
 .DS_Store
 config.js
 package-lock.json
+.env
 
 #ignore this folder which store image files for metadata production usage
 imageAssets/
