--- a/mapoutUI/landingpage/package.json
+++ b/mapoutUI/landingpage/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "auth0-js": "^9.7.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
